--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
 absl-py==2.1.0
+altgraph==0.17.4
 attrs==23.2.0
+bottle==0.12.25
+bottle-websocket==0.2.9
+cachetools==5.3.3
+certifi==2024.2.2
 cffi==1.16.0
+charset-normalizer==3.3.2
 contourpy==1.2.1
 cycler==0.12.1
+Eel==0.16.0
 flatbuffers==24.3.25
 fonttools==4.51.0
+future==1.0.0
+gevent==24.2.1
+gevent-websocket==0.10.1
+greenlet==3.0.3
+idna==3.7
 jax==0.4.26
 kiwisolver==1.4.5
 matplotlib==3.8.4
@@ -14,12 +26,20 @@ numpy==1.26.4
 opencv-contrib-python==4.9.0.80
 opt-einsum==3.3.0
 packaging==24.0
+pefile==2023.2.7
 pillow==10.3.0
 protobuf==3.20.3
 pycparser==2.22
+pyinstaller==6.6.0
+pyinstaller-hooks-contrib==2024.5
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+pywin32-ctypes==0.2.2
+requests==2.31.0
 scipy==1.13.0
 six==1.16.0
 sounddevice==0.4.6
-cv2
+urllib3==2.2.1
+whichcraft==0.6.1
+zope.event==5.0
+zope.interface==6.3
